--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: customizable_date_picker
 description: A new Flutter project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/maeltoukap/customizable_date_picker
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
